--- a/404.html
+++ b/404.html
@@ -3,12 +3,12 @@ layout: default
 ---
 
 <style type="text/css" media="screen">
-  .container {
+  .container-404 {
     margin: 10px auto;
     max-width: 600px;
     text-align: center;
   }
-  h1 {
+  .container-404 > h1 {
     margin: 30px 0;
     font-size: 4em;
     line-height: 1;
@@ -16,7 +16,7 @@ layout: default
   }
 </style>
 
-<div class="container">
+<div class="container-404">
   <h1>404</h1>
 
   <p><strong>Page not found :(</strong></p>
