--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@ layout: home
 
 <!-- <h1>Connecting the dots on Azure, Microsoft 365, Power Platform, and Azure DevOps.</h1> -->
 
-<!-- <img alt="msc365 banner" src="https://msc365.eu/assets/img/msc365-banner.jpg" width="1024"/> -->
+<img alt="msc365 banner" src="https://msc365.eu/assets/img/msc365-banner.jpg" width="1024"/>
 
+<!-- 
 <div class="note">
     <p><strong>Note</strong>: As of February 2023 I will start as a remote (hybrid) freelancer, based in Portugal, offering my services 
         throughout Europe, mainly, but not limited to, The Netherlands, Portugal and Switzerland. In the meantime I am building this blog, first to showcase my portfolio 
         and then to write about common use cases I come across.</p>
-</div>
+</div> -->
 
 <br>
