--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: home
 
 <!-- <h1>Connecting the dots on Azure, Microsoft 365, Power Platform, and Azure DevOps.</h1> -->
 
-<img alt="msc365 banner" src="https://msc365.eu/assets/img/msc365-banner.jpg" width="1024"/>
+<!-- <img alt="msc365 banner" src="https://msc365.eu/assets/img/msc365-banner.jpg" width="1024"/> -->
 
 <!-- 
 <div class="note">
