--- a/assets/minima-social-icons.html
+++ b/assets/minima-social-icons.html
@@ -2,7 +2,7 @@
 permalink: /assets/minima-social-icons.svg
 ---
 
-<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+<svg xmlns="http://www.w3.org/2000/svg">
 {%- for entry in site.minima.social_links %}
   {% assign key = entry.platform -%}
   <symbol id="{{ key }}" fill-rule="evenodd" clip-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="1.414" viewBox="0 0 16 16">
