--- a/assets/my-social-icons.html
+++ b/assets/my-social-icons.html
@@ -1,5 +1,5 @@
 ---
-permalink: /assets/minima-social-icons.svg
+permalink: /assets/my-social-icons.svg
 ---
 
 <svg xmlns="http://www.w3.org/2000/svg">
